assets/style.css
*, *:before, *:after {
  box-sizing: border-box; }

body {
  font-size: 16px;
  font-family: Helvetica;
  line-height: 1.5;
  font-weight: 300;
  margin: 0;
  padding: 0;
  color: #55AFA8; }

a {
  color: #B4EAE6;
  cursor: pointer;
  text-decoration: none;
  border-bottom: 1px dotted; }

iframe {
  border: none;
  width: 100%; }
  iframe.iframe--tabs {
    height: 550px; }
  iframe.iframe--posts {
    height: 400px; }

.list--bare, .post__locations, .listing__comments {
  list-style: none;
  margin: 0;
  padding: 0; }

tabs {
  display: block; }

.chooser {
  height: 3em;
  text-align: center;
  border-bottom-style: double;
  cursor: pointer;
  color: #b4eae6;
  border-color: black;
}

.dockable.docked {
  display: none;
}

.chooser.choosing {
  display: none;
}

.chooser.atTop {
  display: inline;
  top: 0px;
  width: 100%;
  position: fixed;
  z-index: 1010;
}

.tab {
  display: inline-block;
  z-index: 2;
  vertical-align: middle;
  height: 45px;
  width: 49.80%;
  line-height: 45px;
  text-align: center;
  cursor: pointer;
  border: 1px solid;
  background-color: #FFF;
  margin-right: 0.1%;
  margin-left: 0.1%; }
  .tab.is-active {
    background-color: #4f5367;}

.tabContent.docked {
  border: 1px solid;
  text-align: center;
  background-color: #4f5367;
  padding: 40px 20px 20px 20px;
}

.tabContent:not(.docked) {
  border: 1px solid;
  text-align: center;
  padding: 20px 20px 20px 20px;
  position: fixed;
  top: 0px;
  left: 0px;
  width: 100%;
  height: 100%;

}


.tabContent__item {
  display: none; }
.tabContent__item.is-active {
  display: block;
  height: 100%;
  color: #B4EAE6;
}

#image, #next-image {
  background-size: contain;
  background-position: 50% 40%;
  background-repeat: no-repeat;
  position: fixed;
  height: 95%;
  width: 100%;
  top: 3em;
  left: 0;
}

